--- a/RealityCaptureImages/Info.plist
+++ b/RealityCaptureImages/Info.plist
@@ -20,6 +20,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>We use bluetooth to demonstrate fundamental CoreBluetooth functionality</string>
 	<key>NSCameraUsageDescription</key>
 	<string>RealityCaptureImages uses the camera to take photos and video.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
